<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/oompa_loompas__label__no_oompas_found"
        style="@style/Text.Bold.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/oompa_loompas__no_oompas_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oompa_loompas__btn__retry"
        style="@style/Text.Bold.Body2.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/error_dialog__retry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oompa_loompas__label__no_oompas_found" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/oompa_loompas__container__main_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/oompa_loompas__list__oompas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/row_oompa_loompa" />

            <ImageButton
                android:id="@+id/oompa_loompas__btn__previous"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/oompa_loompa__previous_desc"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toStartOf="@id/oompa_loompas__label__page_indicator"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oompa_loompas__list__oompas" />

            <TextView
                android:id="@+id/oompa_loompas__label__page_indicator"
                style="@style/Text.Bold.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="@id/oompa_loompas__btn__previous"
                app:layout_constraintEnd_toStartOf="@id/oompa_loompas__btn__next"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/oompa_loompas__btn__previous"
                app:layout_constraintTop_toTopOf="@id/oompa_loompas__btn__previous"
                tools:text="1/20" />

            <ImageButton
                android:id="@+id/oompa_loompas__btn__next"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/oompa_loompas__next_desc"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/oompa_loompas__label__page_indicator"
                app:layout_constraintTop_toBottomOf="@id/oompa_loompas__list__oompas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>